fix navigation and subnavigation collapse

--- a/assets/less/view/default.less
+++ b/assets/less/view/default.less
@@ -58,29 +58,6 @@
 			}
 		}
 
-		li {
-			display: block;
-
-			&[data-toggle="collapse"] {
-				cursor: pointer;
-				position: relative;
-
-				> a {
-					display: none;
-
-					@media (max-width: @screen-sm-max) {
-						position: absolute;
-						display: block;
-						width: 100%;
-						height: 100%;
-						top: 0;
-						left: 0;
-						z-index: 1;
-					}
-				}
-			}
-		}
-
 		#sly-navi-system,
 		#sly-navi-addon {
 			/* variables */
@@ -94,38 +71,54 @@
 			li {
 				line-height: 59px;
 				border-bottom: 1px solid @menu-border-color;
+				display: block;
+				position: relative;
 
-				&[data-toggle="collapse"] {
-					li a {
-						padding-left: 20px;
-					}
+				i[data-toggle="collapse"] {
+					cursor: pointer;
+					text-align: center;
+					border-left: 1px solid @menu-border-color;
+				}
+
+				li:last-child {
+					border-bottom: none;
+				}
+
+				li a {
+					padding-left: 20px;
 				}
 			}
 
 			/* inactive styles */
-
 			li:not(.sly-active) {
-				&,
 				a {
 					color: @menu-inactive-color;
+					transition: color 200ms;
 
 					&:hover {
 						color: @color-green;
+
+						.sly-navigation-icon {
+							color: @color-green;
+						}
 					}
 				}
-				&:hover {
-					.sly-navigation-icon {
-						color: @color-green;
-					}
-				}
+
 				.sly-navigation-icon {
+					transition: color 200ms;
 					color: @menu-inactive-icon-color;
 				}
 			}
 
 			/* active styles */
 			> li.sly-active {
+				border-bottom: none;
 				background-color: @color-green;
+
+				i[data-toggle="collapse"] {
+					color: fade(@color-white, 50);
+					border-left-color: fade(@color-white, 15);
+				}
 			}
 
 			> li.sly-active,
@@ -139,7 +132,6 @@
 			}
 
 			/* icon styles */
-
 			.sly-navigation-icon {
 				width: 32px;
 				font-size: 32px;
@@ -161,13 +153,13 @@
 			//
 			// subpage styles for mobile devices
 			.sly-navigation-icon-collapse {
-				width: @input-height-base;
-				height: @input-height-base;
+				width: 59px;
+				height: 59px;
 				font-size: 32px;
 				color: @menu-chevron-color;
-				line-height: @input-height-base;
+				line-height: 59px;
 				position: absolute;
-				top: 5px;
+				top: 0;
 				right: 0;
 				display: none;
 
@@ -203,7 +195,6 @@
 			}
 
 			/* submenu styles */
-
 			> li > ul {
 				background-color: @menu-submenu-bg-color;
 
@@ -258,7 +249,6 @@
 //
 // avoid negative margin by wrapping an extra
 // container around the whole content stuff
-
 #sly-pagehead {
 	background-color: @color-blue-light;
 	position: relative;
